# repo_stats

./: .buildinfo  .gitignore  CHANGES.rst  LICENSE.rst  README.md  genindex.html  index.html  objects.inv  py_API.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  package.yml  tests.yml  update_stats.yml
_modules/: index.html
_modules/repo_stats/: citation_metrics.html  git_metrics.html  plot.html  runner.html  user_stats.html  utilities.html
_sources/: index.rst.txt
cache/: 2018AJ....156..123A.txt  2022ApJ...935..167A.txt  astropy_issues.txt  astropy_pullRequests.txt
coverage/: class_index.html  function_index.html  index.html  status.json  z_e6f4b5fa949e942d_example_module_py.html
docs/: conf.py  index.rst  py_API.rst
repo_stats/: citation_metrics.py  git_metrics.py  parameter_descriptions.json  parameters.json  plot.py  runner.py  user_stats.py  utilities.py
test/: tests.py
