[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "repo_stats"
description = "Repository and citation statistics"
dynamic = ["version"]
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "The Astropy Developers", email = "astropy.team@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8.4", "numpy>=1.24", "pillow>=10.4.0", "requests>=2.32.2"]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "sphinxcontrib-fulltoc",
    "nbsphinx",
    "jupyter_client",
    "ipykernel",
]
coding_standards = [
    "black",
    "ruff",
]

dev = ["repo_stats[test, docs, coding_standards]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
testpaths = [
  "test",
  "docs",
]

[tool.mypy]
exclude = [
  "docs",
]
explicit_package_bases = "True"

[tool.coverage.run]
omit = [
 "repo_stats/__init*",
 "*/repo_stats/__init*",
 "test/*",
 "*/test/*",
]